# Farm_ng_Amiga

./: README.md  _config.yml
slam_nav/: Documentation  package.xml  setup.py
slam_nav/config/: nav2_params_humble.yaml  nav2_params_humble_voxel.yaml
slam_nav/launch/: amiga.launch.py  pc2l.launch.py  relay_topics.launch.py  slam_nav_helper.launch.py
slam_nav/livox_note/: lddc.cpp
slam_nav/maps/: Hop_field.yaml  lab.pgm  lab.yaml
slam_nav/meshes/: lidar_link.STL
slam_nav/pcd/: Lab_map.pcd
slam_nav/rviz/: Amiga_slam.rviz
slam_nav/slam_nav/: amiga_node.py  gps_node.py  vel_node.py
slam_nav/urdf/: amiga.urdf
